--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,6 +11,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Homepage</servlet-name>
-        <url-pattern>/homepage</url-pattern>
+        <url-pattern></url-pattern>
     </servlet-mapping>
 </web-app>
